--- a/index.html
+++ b/index.html
@@ -290,6 +290,67 @@
                         </button>
                     </div>
                 </div>
+                
+                <!-- PROJET 3 -->
+                <div class="details-container color-container" data-project-id="project-3">
+                    <div class="project-view-container">
+                        <!-- Vue Image (par défaut) -->
+                        <div class="project-image-view">
+                            <div class="article-container">
+                                <img src="assets/project-3.jpg" alt="Project 1" class="project-img" />
+                            </div>
+                            <h2 class="experience-sub-title project-title" data-i18n="project-travelapp-title">
+                                SurvivalKit</h2>
+                        </div>
+
+                        <!-- Vue Texte (cachée) -->
+                        <div class="project-text-view">
+                            <h2 class="experience-sub-title" style="margin-bottom: 1rem;"
+                                data-i18n="project-travelapp-title">
+                                Agence de tourisme - App Android
+                            </h2>
+
+                            <div class="project-description">
+                                <p data-i18n="project-travelapp-desc">
+                                    Lorem ipsum...
+                                </p>
+                            </div>
+
+                            <div class="project-tech-stack">
+                                <h3 data-i18n="project-tech-title">Technologies</h3>
+                                <div class="tech-list">
+                                    <span class="tech-tag">JSON</span>
+                                    <span class="tech-tag">SQLite</span>
+                                    <span class="tech-tag">Java</span>
+                                    <span class="tech-tag">Gradle build</span>
+                                    <span class="tech-tag">Figma</span>
+                                </div>
+                            </div>
+
+                            <div class="project-features">
+                                <h3 data-i18n="project-features-title">Caractéristiques principales</h3>
+                                <ul>
+                                    <li data-i18n="project-travelapp-feature-1">...</li>
+                                    <li data-i18n="project-travelapp-feature-2">...</li>
+                                    <li data-i18n="project-travelapp-feature-3">...</li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/nayawakim/Projet_de_session_TCH057_vf'" data-i18n="btn-github">
+                            GitHub
+                        </button>
+                        <button class="btn btn-color-2 project-btn project-details-btn"
+                            onclick="toggleProjectView('project-3')">
+                            Détails
+                        </button>
+                    </div>
+                </div>
 
     </section>
 
