ajouts exp et boutons nav bar

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <div class="nav-container">
             <ul class="nav-links">
                 <li><a href="#about" data-i18n="nav-about">À propos</a></li>
-                <li><a href="#experience" data-i18n="nav-experience">Expérience</a></li>
                 <li><a href="#projects" data-i18n="nav-projects">Projets</a></li>
+                <li><a href="#experience" data-i18n="nav-experience">Expérience</a></li>
                 <li><a href="#contact" data-i18n="nav-contact">Contact</a></li>
             </ul>
             <button class="lang-toggle" onclick="toggleLanguage()">EN</button>
@@ -393,7 +393,7 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>React</h3>
+                                <h3>React Native</h3>
                                 <p data-i18n="exp-basic">Basique</p>
                             </div>
                         </article>
@@ -459,8 +459,8 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>Ladder</h3>
-                                <p data-i18n="exp-experienced">Expérimenté</p>
+                                <h3>React</h3>
+                                <p data-i18n="exp-basic">Basique</p>
                             </div>
                         </article>
                         <article>
@@ -473,7 +473,7 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>RSLogix500</h3>
+                                <h3>Ladder</h3>
                                 <p data-i18n="exp-experienced">Expérimenté</p>
                             </div>
                         </article>
@@ -521,6 +521,8 @@
                     <span class="learning-tag">Machine Learning</span>
                     <span class="learning-tag">Eclipse</span>
                     <span class="learning-tag">Software Maintenance</span>
+                    <span class="learning-tag">Adobe PS</span>
+                    <span class="learning-tag">Blender</span>
                 </div>
             </div>
         </div>
