--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h1 class="title" data-i18n="about-title">À propos de moi</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/IMG_5233.jpeg" alt="Profile picture" class="about-pic" />
+                <img src="./assets/IMG_5233.jpg" alt="Profile picture" class="about-pic" />
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
